# PNN

./: README.md  pyproject.toml
configs/datasets/: cifar100.yaml  tiny_imagenet.yaml
configs/experiments/: attention_cifar100.yaml  base_cifar100.yaml  base_tiny_imagenet.yaml  dynamicvit_lite_cifar100.yaml  dynamicvit_lite_tiny_imagenet.yaml  mlp_cifar100.yaml  pnn_cifar100.yaml  pnn_three_stage_cifar100.yaml  pnn_three_stage_tiny_imagenet.yaml  pnn_tiny_imagenet.yaml  random_cifar100.yaml
configs/models/: pnn_deit_tiny.yaml
scripts/: benchmark.py  eval.py  train.py  visualize.py
src/pnn_vit/: __init__.py  config.py  metrics.py  trainer.py
src/pnn_vit/data/: __init__.py  datasets.py
src/pnn_vit/models/: __init__.py  router.py  vit.py
src/pnn_vit/utils/: __init__.py  io.py
tests/: test_model.py  test_router.py
